--- a/order-test.yml
+++ b/order-test.yml
@@ -7,6 +7,11 @@ spring:
     username: root
     password: root
     url: jdbc:mysql://127.0.0.1:3306/springcloud_sell?characterEncoding=utf-8&useSSL=false&serverTimezone=CTT
+  rabbitmq:
+    host: 192.168.56.101
+    port: 5672
+    username: guest
+    password: guest    
   jpa:
     show-sql: true
 server:
@@ -15,4 +20,4 @@ env:
   test3
 girl:
   name: lili
-  age: 17
+  age: 18
